@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tclOO.c,v 1.53 2008/05/26 22:11:38 dkf Exp $
+ * RCS: @(#) $Id: tclOO.c,v 1.54 2008/05/31 22:30:13 dkf Exp $
  */
 
 #ifdef HAVE_CONFIG_H
@@ -290,6 +290,8 @@ InitFoundation(
     fPtr->classCls->thisPtr->selfCls = fPtr->classCls;
     TclOOAddToInstances(fPtr->objectCls->thisPtr, fPtr->classCls);
     TclOOAddToInstances(fPtr->classCls->thisPtr, fPtr->classCls);
+    AddRef(fPtr->objectCls->thisPtr);
+    AddRef(fPtr->objectCls);
 
     /*
      * Basic method declarations for the core classes.
@@ -313,6 +315,7 @@ InitFoundation(
 	    namePtr /* keeps ref */, 0 /* ==private */, NULL, NULL);
 
     argsPtr = Tcl_NewStringObj("{definitionScript {}}", -1);
+    Tcl_IncrRefCount(argsPtr);
     bodyPtr = Tcl_NewStringObj(
 	    "if {[catch {define [self] $definitionScript} msg opt]} {\n"
 	    "set ei [split [dict get $opt -errorinfo] \\n]\n"
@@ -322,6 +325,7 @@ InitFoundation(
 	    "return -options $opt $msg", -1);
     fPtr->classCls->constructorPtr = TclOONewProcMethod(interp,
 	    fPtr->classCls, 0, NULL, argsPtr, bodyPtr, NULL);
+    Tcl_DecrRefCount(argsPtr);
 
     /*
      * Create non-object commands and plug ourselves into the Tcl [info]
@@ -364,6 +368,8 @@ KillFoundation(
 	Tcl_DeleteAssocData(interp, FOUNDATION_KEY);
     }
 
+    DelRef(fPtr->objectCls->thisPtr);
+    DelRef(fPtr->objectCls);
     Tcl_DecrRefCount(fPtr->unknownMethodNameObj);
     Tcl_DecrRefCount(fPtr->constructorName);
     Tcl_DecrRefCount(fPtr->destructorName);
@@ -490,7 +496,7 @@ AllocObject(
 
     /*
      * Access the namespace command table directly when creating "my" to avoid
-     * a bottleneck in string manipulation. 
+     * a bottleneck in string manipulation.
      */
 
     {
@@ -559,7 +565,7 @@ ObjectRenamedTrace(
 
     AddRef(oPtr);
     oPtr->flags |= OBJECT_DELETED;
-    if (!Tcl_InterpDeleted(interp)) {
+    if (!(flags & TCL_INTERP_DESTROYED)) {
 	CallContext *contextPtr = TclOOGetCallContext(oPtr, NULL, DESTRUCTOR);
 
 	if (contextPtr != NULL) {
@@ -631,7 +637,8 @@ ReleaseClassContents(
 	AddRef(list[i]);
     }
     for (i=0 ; i<n ; i++) {
-	if (!(list[i]->flags & OBJECT_DELETED) && interp != NULL) {
+	if (!(list[i]->thisPtr->flags & OBJECT_DELETED)) {
+	    list[i]->thisPtr->flags |= OBJECT_DELETED;
 	    Tcl_DeleteCommandFromToken(interp, list[i]->thisPtr->command);
 	}
 	DelRef(list[i]);
@@ -649,7 +656,8 @@ ReleaseClassContents(
 	AddRef(list[i]);
     }
     for (i=0 ; i<n ; i++) {
-	if (!(list[i]->flags & OBJECT_DELETED) && interp != NULL) {
+	if (!(list[i]->thisPtr->flags & OBJECT_DELETED)) {
+	    list[i]->thisPtr->flags |= OBJECT_DELETED;
 	    Tcl_DeleteCommandFromToken(interp, list[i]->thisPtr->command);
 	}
 	DelRef(list[i]);
@@ -667,7 +675,8 @@ ReleaseClassContents(
 	AddRef(insts[i]);
     }
     for (i=0 ; i<n ; i++) {
-	if (!(insts[i]->flags & OBJECT_DELETED) && interp != NULL) {
+	if (!(insts[i]->flags & OBJECT_DELETED)) {
+	    insts[i]->flags |= OBJECT_DELETED;
 	    Tcl_DeleteCommandFromToken(interp, insts[i]->command);
 	}
 	DelRef(insts[i]);
@@ -678,9 +687,11 @@ ReleaseClassContents(
 
     if (clsPtr->constructorChainPtr) {
 	TclOODeleteChain(clsPtr->constructorChainPtr);
+	clsPtr->constructorChainPtr = NULL;
     }
     if (clsPtr->destructorChainPtr) {
 	TclOODeleteChain(clsPtr->destructorChainPtr);
+	clsPtr->destructorChainPtr = NULL;
     }
     if (clsPtr->classChainCache) {
 	FOREACH_HASH_DECLS;
@@ -691,6 +702,7 @@ ReleaseClassContents(
 	}
 	Tcl_DeleteHashTable(clsPtr->classChainCache);
 	ckfree((char *) clsPtr->classChainCache);
+	clsPtr->classChainCache = NULL;
     }
 
     if (clsPtr->filters.num) {
@@ -808,7 +820,7 @@ ObjectNamespaceDeleted(
 	oPtr->metadataPtr = NULL;
     }
 
-    if (clsPtr != NULL && !(oPtr->flags & ROOT_OBJECT)) {
+    if (clsPtr != NULL) {
 	Class *superPtr, *mixinPtr;
 
 	if (clsPtr->metadataPtr != NULL) {
@@ -824,7 +836,6 @@ ObjectNamespaceDeleted(
 	    clsPtr->metadataPtr = NULL;
 	}
 
-	clsPtr->flags |= OBJECT_DELETED;
 	FOREACH(filterObj, clsPtr->filters) {
 	    Tcl_DecrRefCount(filterObj);
 	}
@@ -833,7 +844,7 @@ ObjectNamespaceDeleted(
 	    clsPtr->filters.num = 0;
 	}
 	FOREACH(mixinPtr, clsPtr->mixins) {
-	    if (!(mixinPtr->flags & OBJECT_DELETED)) {
+	    if (!(mixinPtr->thisPtr->flags & OBJECT_DELETED)) {
 		TclOORemoveFromMixinSubs(clsPtr, mixinPtr);
 	    }
 	}
@@ -842,7 +853,7 @@ ObjectNamespaceDeleted(
 	    clsPtr->mixins.num = 0;
 	}
 	FOREACH(superPtr, clsPtr->superclasses) {
-	    if (!(superPtr->flags & OBJECT_DELETED)) {
+	    if (!(superPtr->thisPtr->flags & OBJECT_DELETED)) {
 		TclOORemoveFromSubclasses(clsPtr, superPtr);
 	    }
 	}
