@@ -7,7 +7,7 @@
 # See the file "license.terms" for information on usage and redistribution of
 # this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: oo.test,v 1.28 2008/05/30 23:01:23 dkf Exp $
+# RCS: @(#) $Id: oo.test,v 1.29 2008/05/31 22:30:14 dkf Exp $
 
 package require TclOO 0.4 ;# Must match value in configure.in
 if {[lsearch [namespace children] ::tcltest] == -1} {
@@ -65,6 +65,13 @@ test oo-0.4 {basic test of OO's ability to clean up its initial state} -body {
 	foo destroy
     }
 } -constraints memory -result 0
+test oo-0.5 {testing literal leak on interp delete} memory {
+    leaktest {
+	interp create foo
+	foo eval {oo::object new}
+	interp delete foo
+    }
+} 0
 
 test oo-1.1 {basic test of OO functionality: no classes} {
     set result {}
